Fixes header on smaller screens

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -1132,6 +1132,7 @@ button.on {
 @media screen and (max-width: 500px) {
   .header-text {
     line-height: 1.2em;
+    font-size: 26px !important;
   }
 }
 
